--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 07.02.2022 07:41:58</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 07.02.2022 08:10:10</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,17 +7,24 @@
 <h5>Pondělí, 07. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová</strong>
+<strong>Zeleninová s kapií</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí stehno na kari s rýží</strong>
+<strong>Hovězí stroganov s rýží</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
+						</span>
+</p>
+<p>
+<strong>Zapečené brambory s uzeným masem a okurkou</strong>
+<!--<span class="dots">..........................................................................</span>-->
+<span class="priceLabel">
+							131,-
 						</span>
 </p>
 <p>
