Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 08.02.2022 08:33:30</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 08.02.2022 09:12:06</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,24 +7,24 @@
 <h5>Úterý, 08. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Zeleninová s kapií</strong>
+<strong>Česneková smetanová</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Hovězí stroganov s rýží</strong>
+<strong>Smažené rybí file s vařeným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Zapečené brambory s uzeným masem a okurkou</strong>
+<strong>Těstoviny s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							131,-
+							133,-
 						</span>
 </p>
 <p>
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 8.2.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Věneček</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Karamelový cheesecake</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Mrkvový dort</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem a meruňkami </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Polévka z červeného zelí a řepy, zakysaná smetana, bylinkový olej - samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Polévka z červeného zelí a řepy, zakysaná smetana, bylinkový olej- s menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Grilovaná vepřová krkovice, hořčičná omáčka, pečené brambory <em title="Mléko">7</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Kuřecí prso ve sweet&amp;sour omáčce, bambusové výhonky, mungo, jasmínová rýže  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Červená řepa po burgundsku, kořenová zelenina, pečené žampiony, restované bramborové gnocchi <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -131,7 +176,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny pstruh s citronem a cernymi tureckymi olivami, cizrnovy hummus, salatek 139</li><li>Peceny filet z cerstve bile tresky s citronem a cernymi tureckymi olivami, cizrnovy hummus, salatek 169</li><li>Thajske kari s krutimi prsicky, ananasem, bramborami, arasidy a kokosovym mlekem, jasminova ryze 139</li><li>Grilovane medailonky z kanci kyty s restovanymi houbami na cibulce,  pecene brambory, salatek 169</li><li>Indicke badzi {cizrnovo-cibulove smazenky}, jogurtovy dip, pohanka, salatek 139  </li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s ananasovou salsou, zeleninovy bulgur, salatek {L} 139</li><li>Peceny filet z cerstveho norskeho lososa a halibuta s ananasovou salsou, zeleninovy bulgur, salatek {L} 169</li><li>Kow mo daeng – thajske grilovane veprove ve sladke marinade s badyanem a zelenymi bylinkami, jasminova ryze, salatek 139</li><li>Italske hraskove rizoto se syrem {risi bisi} a bazantimi stehynky nadivoko, salatek 169</li><li>Ful medames – egyptske boby se zeleninou, rimskym kminem a sazenym vejcem, arabske placky, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
