Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 09.02.2022 08:33:33</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 09.02.2022 09:12:46</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Středa, 09. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Česneková smetanová</strong>
+<strong>Kari s vepřovým masem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažené rybí file s vařeným bramborem a tatarkou</strong>
+<strong>Cikánský Vepřový plátek s hranolkami a chilli majonézou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
 						</span>
 </p>
 <p>
-<strong>Těstoviny s tomatovou omáčkou, kuřecím masem a parmazánem</strong>
+<strong>Salát nicoise (salát, fazolky, brambory, tuňák, paprika, vejce..)</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							133,-
