Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 09.02.2022 10:09:58</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 09.02.2022 10:35:50</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -176,7 +176,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a orechovym pestem, stredomorsky fusilli salat s paprikami, cernymi olivami a zeleninou {L} 139</li><li>Peceny filet z cerstveho morskeho dasa s citronem a orechovym pestem, stredomorsky fusilli salat s paprikami, cernymi olivami a zeleninou {L} 169</li><li>Boeuf Stroganoff – hovezi nudlicky se zampiony, znojemskymi okurkami, cibulkou a zakysanou smetanou, jasminova ryze, salatek 139</li><li>Zverinovy burger {danci, divocak} s rajcetem, pekingskym zelim, sriracha majonezou a goudou, pecene brambory, salatek {L} 169</li><li>Imam bayildi – zapeceny lilek s rajcaty, restovanou cibulkou a balkanskym syrem, zeleninovy bulgur, salatek {L} 139</li></ol>
+<ol><li>Peceny filet z atlanticke makrely s citronem a orechovym pestem, stredomorsky fusilli salat s paprikami, cernymi olivami a zeleninou {L} 139-vyprodáno</li><li>Peceny filet z cerstveho morskeho dasa/nebo cerstveho halibuta/ s citronem a orechovym pestem, stredomorsky fusilli salat s paprikami, cernymi olivami a zeleninou {L} 169</li><li>Boeuf Stroganoff – hovezi nudlicky se zampiony, znojemskymi okurkami, cibulkou a zakysanou smetanou, jasminova ryze, salatek 139</li><li>Zverinovy burger {danci, divocak} s rajcetem, pekingskym zelim, sriracha majonezou a goudou, pecene brambory, salatek {L} 169</li><li>Imam bayildi – zapeceny lilek s rajcaty, restovanou cibulkou a balkanskym syrem, zeleninovy bulgur, salatek {L} 139</li></ol>
 </td>
 </tr>
 </table>
