Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 10.02.2022 08:33:50</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 10.02.2022 09:11:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -52,7 +52,47 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Čtvrtek 10.2.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Banánový Míša dort </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ořechový koláč </div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Kokosový puding s mangem nebo malinami </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Dýňový krém, kokosové mléko, kari, semínka - samostatně <em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Dýňový krém, kokosové mléko, kari, semínka - s menu <em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí loupaná plec, rajská omáčka, houskový knedlík <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>150g Pečené krůtí prso, dušená kapusta, bramborovo-dýňové pyré <em title="Mléko">7</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>300g Portobello plněné ratatouille zeleninou a sýrem, pečené brambory, míchaný salát <em title="Mléko">7</em><em title="Hořčice">10</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -128,7 +168,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely s citronem a orechovym pestem, stredomorsky fusilli salat s paprikami, cernymi olivami a zeleninou {L} 139</li><li>Peceny filet z cerstveho morskeho dasa/nebo cerstveho halibuta/ s citronem a orechovym pestem, stredomorsky fusilli salat s paprikami, cernymi olivami a zeleninou {L} 169</li><li>Boeuf Stroganoff – hovezi nudlicky se zampiony, znojemskymi okurkami, cibulkou a zakysanou smetanou, jasminova ryze, salatek 139</li><li>Zverinovy burger {danci, divocak} s rajcetem, pekingskym zelim, sriracha majonezou a goudou, pecene brambory, salatek {L} 169</li><li>Imam bayildi – zapeceny lilek s rajcaty, restovanou cibulkou a balkanskym syrem, zeleninovy bulgur, salatek {L} 139</li></ol>
+<ol><li>Filet z atlantickeho hejka zapeceny na recky zpusob s rajcaty, maslovymi fazolemi a mozzarellou, jasminova ryze, salatek 139</li><li>Peceny filet z cerstveho norskeho lososa s kaparovo-vinnou omackou, stouchane brambory s cibulkou, salatek z cervene repy s krenem 169</li><li>Lasagne s hovezim a krutim masem, rajcaty a zelenymi bylinkami zapecene ve smetanove omacce, salatek {L} 139</li><li>Grilovane medailonky z krutich prsou s dzemem z cervene cibule s hrebickem, zeleninove birjany z basmati ryze, salatek 169</li><li>Smazeny brokolicovy rizek s kapustou a goudou, stouchane brambory s cibulkou, tatarska omacka {L} 139</li></ol>
 </td>
 </tr>
 </table>
