Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.02.2022 09:11:45</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"></head><small>Last update: 11.02.2022 09:38:11</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -21,7 +21,7 @@
 						</span>
 </p>
 <p>
-<strong>Skořicové lívance s borůvkami</strong>
+<strong>Skořicové lívance s borůvkami a tvarohem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							115,-
@@ -173,7 +173,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene brambory, salatek 139</li><li>Spagety s kousky chobotnice a humra, susenymi rajcaty a restovanym porkem, parmezan {L} 175</li><li>Zauzene pecene seleci ribsy v barbecue marinade, jasminova ryze, salatek 139</li><li>Medailonky z kanci plece na zelenem pepri, pecene brambory s podzimni zeleninou, salatek 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, sazenym vejcem a mozzarellou, salatek 139</li></ol>
+<ol><li>Peceny jihocesky pstruh s krenovou jogurtovou omackou, pecene brambory, salatek 139</li><li>Spagety s kousky chobotnice a humra, susenymi rajcaty a restovanym porkem, parmezan {L} 175</li><li>Zauzene pecene seleci ribsy v barbecue marinade, jasminova ryze, salatek 139</li><li>Medailonky z kanci plece na zelenem pepri, pecene brambory s podzimni zeleninou, salatek 169</li><li>Bramborove gnocchi s rajcaty, maslovymi fazolemi, sazenym vejcem a mozzarellou, salatek ( L ) 139</li></ol>
 </td>
 </tr>
 </table>
