Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.02.2022 08:33:45</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.02.2022 09:12:27</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,21 +7,21 @@
 <h5>Úterý, 15. 02. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Cizrnová</strong>
+<strong>Farmářská</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Svíčková na smetaně s houskovým knedlíkem</strong>
+<strong>Těstoviny bolognesse s parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							137,-
+							135,-
 						</span>
 </p>
 <p>
-<strong>Míchaný salát s pečeným hermelínem a bagetkou</strong>
+<strong>Smažený holandský řízek s vařeným bramborem a okurkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							135,-
@@ -52,7 +52,52 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Úterý 15.2.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Malinovo-vanilkový tvaroh s piškotem a čokoládovou drobenkou </div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Brownie</div>
+<div class="cena">55 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Linecký koláč s tvarohem a lesním ovocem</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Bavorské bagety dle denní nabídky</div>
+<div class="cena">69 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kukuřičný krém, kuřecí maso, chilli samostatně  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Kukuřičný krém, kuřecí maso, chilli v menu <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">35 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Hovězí stroganov, basmati rýže, smetana, kerblík <em title="Mléko">7</em><em title="Oxid siřičitý a siřičitany">12</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>350g Caesar salát s kuřecím masem, opečená slanina, krutony parmazán   <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Ryby">4</em><em title="Mléko">7</em><em title="Celer">9</em><em title="Hořčice">10</em></div>
+<div class="cena">145 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">3. </span>350g Wrap s grilovaným sýrem halloumi a pečenou zeleninou, míchaný zeleninový salát <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="cena">149 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
@@ -131,7 +176,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Peceny filet z atlanticke makrely se susenymi rajcaty a syrskymi zelenymi olivami, cervena cocka se smazenou cibulkou, salatek 139</li><li>Peceny filet z cerstve bile tresky se susenymi rajcaty a syrskymi zelenymi olivami, cervena cocka se smazenou cibulkou, salatek 169</li><li>Palive a vonave vindalu s veprovym masem, bramborami a garam masala, jasminova ryze, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou danci pleci pecenou na cabernetu a korenove zelenine, zrala gouda, salatek {L} 169</li><li>Brokolicove placicky s quinoou a besanem, jogurtovy dip, birjany z basmati ryze, salatek 139</li></ol>
+<ol><li>filet z peceneho hejka s jahlovým salátem se zeleninou, tahini omacka, salatek 139</li><li>Peceny filet z lososa s jahlovým salátem se zeleninou, tahini omacka, salatek  169</li><li>Vepřové nudličky ve sladke miso omacce, ryzove nudle, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou danci pleci pecenou na cabernetu a korenove zelenine, zrala gouda, salatek {L} 169</li><li>Brokolicove placicky s quinoou a besanem, jogurtovy dip, birjany z basmati ryze, salatek 139</li></ol>
 </td>
 </tr>
 </table>
