Update daily menu

--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.02.2022 09:12:27</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.02.2022 09:38:25</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -176,7 +176,7 @@ drcenými rajčaty a chorizo klobásou 1a,9</td>
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>filet z peceneho hejka s jahlovým salátem se zeleninou, tahini omacka, salatek 139</li><li>Peceny filet z lososa s jahlovým salátem se zeleninou, tahini omacka, salatek  169</li><li>Vepřové nudličky ve sladke miso omacce, ryzove nudle, salatek 139</li><li>Bramborove gnocchi s trhanou pecenou danci pleci pecenou na cabernetu a korenove zelenine, zrala gouda, salatek {L} 169</li><li>Brokolicove placicky s quinoou a besanem, jogurtovy dip, birjany z basmati ryze, salatek 139</li></ol>
+<ol><li>Peceny filet z atlantickeho hejka s citronem a omackou tahini, jahlový salát se zeleninou, bylinkami a mungo klicky 139</li><li>Peceny filet z cerstveho norskeho lososa s citronem a omackou tahini jahlový salát se zeleninou, bylinkami a mungo klicky  169</li><li>Korejske restovane veprove nudličky s miso, sezamem a cesnekem, ryzove nudle, mrkvove cukemono s ananasem a chilli 139</li><li>Wrap s hovezim pastrami, rajcaty, pekingskym zelim a avokadovym jogurtem, pecene brambory, salatek {L} 169</li><li>Indicke kvetakove kari s cizrnou, rajcaty, kokosovym mlekem a zazvorem, chlebove placky {L} 139</li></ol>
 </td>
 </tr>
 </table>
